out
test.cpp:240:13: error: redefinition of ‘void Out(mint)’
  240 | inline void Out(mint e) {cout << e.val() << '\n';}
      |             ^~~
test.cpp:226:13: note: ‘void Out(mint)’ previously defined here
  226 | inline void Out(mint e) {cout << e.val() << '\n';}
      |             ^~~
test.cpp:241:13: error: redefinition of ‘void Out(vm)’
  241 | inline void Out(vm v) {rep(i,SIZE(v)) cout << v[i].val() << (i==SIZE(v)-1?'\n':' ');}
      |             ^~~
test.cpp:227:13: note: ‘void Out(vm)’ previously defined here
  227 | inline void Out(vm v) {rep(i,SIZE(v)) cout << v[i].val() << (i==SIZE(v)-1?'\n':' ');}
      |             ^~~
test.cpp:243:13: error: redefinition of ‘void debug_view(mint)’
  243 | inline void debug_view(mint e){cerr << e.val() << endl;}
      |             ^~~~~~~~~~
test.cpp:229:13: note: ‘void debug_view(mint)’ previously defined here
  229 | inline void debug_view(mint e){cerr << e.val() << endl;}
      |             ^~~~~~~~~~
test.cpp:244:13: error: redefinition of ‘void debug_view(vm&)’
  244 | inline void debug_view(vm &v){for(auto e: v){cerr << e.val() << " ";} cerr << endl;}
      |             ^~~~~~~~~~
test.cpp:230:13: note: ‘void debug_view(vm&)’ previously defined here
  230 | inline void debug_view(vm &v){for(auto e: v){cerr << e.val() << " ";} cerr << endl;}
      |             ^~~~~~~~~~
test.cpp:245:13: error: redefinition of ‘void debug_view(vvm&)’
  245 | inline void debug_view(vvm &vv){cerr << "----" << endl;for(auto &v: vv){debug_view(v);} cerr << "--------" << endl;}
      |             ^~~~~~~~~~
test.cpp:231:13: note: ‘void debug_view(vvm&)’ previously defined here
  231 | inline void debug_view(vvm &vv){cerr << "----" << endl;for(auto &v: vv){debug_view(v);} cerr << "--------" << endl;}
      |             ^~~~~~~~~~
